--- a/solve_onell/searl/searl_td3_config.yml
+++ b/solve_onell/searl/searl_td3_config.yml
@@ -11,14 +11,14 @@ expt:
 ###      NEVO Configuration         ###
 #######################################
 nevo:
-  population_size:              3
+  population_size:              2
   tournament_size:              2
   selection:                    True
   mutation:                     True
   training:                     True
   elitism:                      True
-  min_train_time:               200
-  worker:                       3
+  min_train_time:               1000
+  worker:                       2
   reuse_batch:                  1
   ind_memory:                   False
   init_random:                  False
@@ -30,9 +30,16 @@ mutation:
   architecture:                 0.2
   activation:                   0.2
   rl_hyperparam:                0.2
-  rl_hp_selection:              ['lr_actor','lr_critic'] # 'train_frames_fraction','batch_size',,'td3_policy_noise','td3_update_freq', 'optimizer']
-  new_layer_prob:               0.2
-  mutation_sd:                  0.1
+  new_layer_prob:               0.2  # for architecture mutation
+  mutation_sd:                  0.1  # for parameters mutation
+  rl_hp_selection:              ['lr_actor','lr_critic','batch_size','td3_policy_noise']  # for rl_hyperparameter mutation
+  rl_hp_ranges:
+    lr_actor:                   [0.00001, 0.005]
+    lr_critic:                  [0.00001, 0.005]
+    batch_size:                 [128, 4096]
+    td3_policy_noise:           [0, 0.1]
+    train_frames_fraction:      [0.1, 3.0]
+  #rl_hp_selection:              ['lr_actor','lr_critic'] # 'train_frames_fraction','batch_size','td3_policy_noise','td3_update_freq', 'optimizer']
 
 
 train:
@@ -47,7 +54,7 @@ rl:
   train_frames_fraction:        0.5 # 5000 train_iternations
   gamma:                        0.99
   tau:                          0.005
-  batch_size:                   100
+  batch_size:                   600
   lr_actor:                     0.001
   lr_critic:                    0.001
   clip_grad_norm:               100
@@ -82,7 +89,7 @@ bench:
 eval:
   eval_episodes:                1
   min_eval_steps:               250
-  exploration_noise:            0.1     # Default 0.1
+  exploration_noise:            0     # Default 0.1
   test_episodes:                10
   test_seed:                    123
 
