--- a/solve_onell/searl/exp-searl/01-div.yml
+++ b/solve_onell/searl/exp-searl/01-div.yml
@@ -82,9 +82,9 @@ bench:
   name:                         'dacbench.benchmarks.onell_benchmark.OneLLBenchmark'
   base_config_name:             'lbd_theory'
   instance_set_path:            'onemax_500'
-  reward_choice:                'imp_minus_evals'
+  reward_choice:                'imp_div_evals_new'
   init_solution_ratio:          0.95
-  action_space_args:            [[1], [100]]
+  action_space_args:            [[1], [50]]
 
 
 
