--- a/solve_onell/searl/exp-searl/02-2000.yml
+++ b/solve_onell/searl/exp-searl/02-2000.yml
@@ -81,8 +81,8 @@ seed:
 bench:
   name:                         'dacbench.benchmarks.onell_benchmark.OneLLBenchmark'
   base_config_name:             'lbd_theory'
-  instance_set_path:            'onemax_500'
-  reward_choice:                'imp_minus_evals'
+  instance_set_path:            'onemax_2000'
+  reward_choice:                'minus_evals'
   init_solution_ratio:          0.95
   action_space_args:            [[1], [100]]
 
